...
      syncedSteps: syncedSteps ?? this.syncedSteps,
    );
  }

  String get brand {
    switch (type) {
      case 'WATCH_APPLE': return 'Apple';
      case 'WATCH_ANDROID': return 'Google';
      case 'FITBIT': return 'Fitbit';
      case 'GARMIN': return 'Garmin';
      case 'PHONE': return 'Phone';
      default: return 'Other';
    }
  }
...
